// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card advanced 1`] = `
<div>
  <div
    class="p-card p-component"
    data-pc-name="card"
    data-pc-section="root"
    id="card"
    style="width: 25rem; margin-bottom: 2em;"
  >
    <div
      class="p-card-header"
      data-pc-section="header"
    >
      <img
        alt="Card"
        src="/images/usercard.png"
      />
    </div>
    <div
      class="p-card-body"
      data-pc-section="body"
    >
      <div
        class="p-card-title"
        data-pc-section="title"
      >
        Advanced Card
      </div>
      <div
        class="p-card-subtitle"
        data-pc-section="subtitle"
      >
        Subtitle
      </div>
      <div
        class="p-card-content"
        data-pc-section="content"
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!
        </p>
      </div>
      <div
        class="p-card-footer"
        data-pc-section="footer"
      >
        <span>
          <button
            aria-label="Save"
            class="p-button p-component"
            data-pc-name="button"
            data-pc-section="root"
          >
            <span
              class="p-button-icon p-c p-button-icon-left pi pi-check"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
              Save
            </span>
          </button>
          <button
            aria-label="Cancel"
            class="p-button-secondary ml-2 p-button p-component"
            data-pc-name="button"
            data-pc-section="root"
          >
            <span
              class="p-button-icon p-c p-button-icon-left pi pi-times"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
              Cancel
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card default 1`] = `
<div>
  <div
    class="p-card p-component"
    data-pc-name="card"
    data-pc-section="root"
  >
    <div
      class="p-card-body"
      data-pc-section="body"
    />
  </div>
</div>
`;

exports[`Card subtitle 1`] = `
<div>
  <div
    class="p-card p-component"
    data-pc-name="card"
    data-pc-section="root"
  >
    <div
      class="p-card-body"
      data-pc-section="body"
    >
      <div
        class="p-card-title"
        data-pc-section="title"
      >
        subtitle
      </div>
      <div
        class="p-card-subtitle"
        data-pc-section="subtitle"
      >
        subtitle
      </div>
      <div
        class="p-card-content"
        data-pc-section="content"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Card title 1`] = `
<div>
  <div
    class="p-card p-component"
    data-pc-name="card"
    data-pc-section="root"
  >
    <div
      class="p-card-body"
      data-pc-section="body"
    >
      <div
        class="p-card-title"
        data-pc-section="title"
      >
        Simple Card
      </div>
      <div
        class="p-card-content"
        data-pc-section="content"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
